making boxplot and histogram for video duration, view, and like

--- a/tiktok_project_part_2.ipynb
+++ b/tiktok_project_part_2.ipynb
@@ -755,13 +755,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note:** Similar to view count, there are far more videos with < 100,000 likes than there are videos with more. However, in this case there is more of a taper, as the data skews right, with many videos at the upper extremity of like count."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "**Note:** Similar to view count, there are far more videos with < 100,000 likes than there are videos with more. However, in this case there is more of a taper, as the"
-   ]
+   "source": []
   }
  ],
  "metadata": {
