--- a/tiktok_project_part_2.ipynb
+++ b/tiktok_project_part_2.ipynb
@@ -1329,6 +1329,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can conclude that the provided dataset has more"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
