--- a/tiktok_project_part_2.ipynb
+++ b/tiktok_project_part_2.ipynb
@@ -1339,7 +1339,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can conclude that the provided dataset has more"
+    "Based on the notes from the EDA, here are some conclusions we can draw:\n",
+    "\n",
+    "1. **Missing Data:** Several variables, including claim status and various video metrics, have missing data. This could affect the analysis and should be addressed through imputation or careful handling during modeling.\n",
+    "\n",
+    "\n",
+    "2. **Video Duration:** All videos in the dataset have durations ranging from 5 to 60 seconds, with a uniform distribution. This information could be useful for content creators or platform algorithms to optimize video length for engagement.\n",
+    "\n",
+    "\n",
+    "3. **View Counts:** The distribution of view counts is highly uneven, with most videos receiving fewer than 100,000 views. However, the distribution becomes more uniform for videos with over 100,000 views. This suggests that a minority of videos drive the majority of views.\n",
+    "\n",
+    "\n",
+    "4. **Likes, Shares, Comments, and Downloads:** Similar to view counts, metrics like likes, shares, comments, and downloads are heavily skewed to the right, indicating that a small proportion of videos receive a disproportionately large amount of engagement.\n",
+    "\n",
+    "\n",
+    "5. **Verified Users and Content Types:** Verified users are less common but more likely to post opinions. There's a higher proportion of active authors for opinion videos compared to claim videos, suggesting that authors posting claim videos are more likely to face scrutiny or bans.\n",
+    "\n",
+    "\n",
+    "6. **Relationship Between Author Status and View Counts:** Non-active authors, who are more likely to post claim videos, tend to have higher median view counts compared to active authors. This suggests that video view count could potentially be a useful indicator of claim status.\n",
+    "\n",
+    "\n",
+    "7. **Dominance of Claim Videos in Overall View Count:** Despite there being roughly the same number of claim and opinion videos in the dataset, claim videos dominate the overall view count. This highlights the potential impact and visibility of claim-related content.\n"
    ]
   },
   {
